--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100vw;
 }
-
+/* ヘッダーに関して */
 .header{
   height:150px;
 }
@@ -29,20 +29,53 @@
   background-color: red;
 }
 
-#log-in{
+
+#log-list{
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
 }
 
-#log-list{
-  display: block;
-}
-
 
 .log-btn{
   display: block;
   padding: 15px;
+  margin: 10px;
   border: 1px solid black;
+  background-color: blue;
+  color: white;
+}
+
+/* メイン（商品一覧） */
+#main{
+  height: 100vh;
+  width: 100vw;
+  background-color: coral;
+  padding: 30px;
+}
+
+#main-showings{
+  height: 100%;
+  background-color: cornflowerblue;
+  overflow: scroll;
+}
+
+.show-boxs{
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+}
+
+.show-box{
+  width: 300px;
+  height: 300px;
+  margin: 20px;
+  background-color: white;
+}
+
+#food-title{
+text-align: center;
+padding-top: 20px;
+font-size: 40px;
 }
