--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -4,5 +4,26 @@
     </div>
 
     <div id="main">
+      <div id="main-showings">
+        <ul class="show-boxs">
+        <% @foods.each do |food| %>
+          <li class="show-box">
+            <div class="boxs">
+              <div id="pic">
+              <%=image_tag food.image, size: '300x200'%>
+              </div>
+              <div id="food-title">
+              <h3 id="title"><%= food.name %></h3>
+              </div>
+            </div>
+          </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
 </div>
+
+<%= link_to(new_food_path, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>出品する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<% end %>
