--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -8,14 +8,14 @@
     <div id="new-main">
 
       <div class="items-sell-main">
-    <h2 class="items-sell-title">商品の情報を入力</h2>
+    <h2 class="items-sell-title">料理の情報を入力</h2>
     <%= form_with model: @foods, local: true do |f| %>
       </div>
 
       <%# 商品画像 %>
     <div class="img-upload">
       <div class="weight-bold-text">
-        商品画像
+        料理画像
         <span class="indispensable">必須</span>
       </div>
       <div class="click-upload">
