--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
     <div id="user-show-nickname">
       <%= @user.nickname %>
     </div>
+    <div>ユーザー詳細ページ</div>
 
 <div id="user-show-main">
     <% @user.foods.each do |food| %>
