--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -29,7 +29,7 @@
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
 
-<%= link_to(new_food_path, class: 'random-btn') do %>
+<%= link_to(randoms_path, class: 'random-btn') do %>
   <span class='random-btn-text'>Rondom</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "random-btn-icon" %>
 <% end %>
