--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -60,7 +60,7 @@
 
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
-      <%= f.submit "出品する" ,class:"sell-btn" %>
+      <%= f.submit "出品する" ,class:"sell-btn", id: "sell-btn" %>
       <%=link_to 'もどる', root_path, class:"back-btn" %>
     </div>
     <% end %>
