--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -6,5 +6,7 @@
   <div><%= @food.name %></div>
   <div><%= image_tag @food.image, size: "300x300" %></div>
   <div><%= @food.ways %></div>
-  <div></div>
+  <%if current_user.id == @food.user.id %>
+  <div>   <%= link_to "編集する",  edit_food_path(@food.id)%></div>
+  <%end %>
 </div>
