--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,8 @@
 </div>
 
     <div id="user-show-nickname">
-      <%= @user.nickname %>
+      <%= "#{@user.nickname} さんの詳細ページ" %>
     </div>
-    <div>ユーザー詳細ページ</div>
 
 <div id="user-show-main">
     <% @user.foods.each do |food| %>
