--- a/app/assets/stylesheets/btn.css
+++ b/app/assets/stylesheets/btn.css
@@ -1,12 +1,13 @@
 .purchase-btn {
   width: 120px;
-  background: #3ccace;
+  background: #adbd1e;
   text-align: center;
   border-radius: 4%;
   bottom: 32px;
   right: 32px;
   position: fixed;
   padding: 15px;
+
 }
 
 .purchase-btn-text {
@@ -25,7 +26,7 @@
 
 .random-btn {
   width: 120px;
-  background: #3ccace;
+  background: #adbd1e;
   text-align: center;
   border-radius: 4%;
   bottom: 150px;
