--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -1,32 +1,39 @@
-#user-show-main{
-  width: 100vw;
-  height: 100vh;
-  background-color: darkgreen;
-  padding: 20px;
-}
+
 
 #user-show-main{
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   overflow: scroll;
+  background-color: darkgreen;
+  background-image: url("ingredients.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #user-show-nickname{
   font-size: 30px;
-  color: white;
   height: 100px;
   text-align: center;
-  background-color: black;
+  padding-top: 30px;
 }
 
 #user-show-food-name{
   text-align: center;
+  font-size: 35px;
+  padding: 10px;
+  border-width: 4px;
+  border-style: double;
+  border-color: black;
 }
 
 #user-show-foods{
   height: 300px;
   width: 300px;
-  margin: 20px;
+}
+
+#user-show-image:hover{
+  border: 1px solid gold
 }
