--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -26,10 +26,10 @@
 
 <%= link_to(new_food_path, class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+  <%= image_tag 'food.jpg' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
 
 <%= link_to(randoms_path, class: 'random-btn') do %>
   <span class='random-btn-text'>Rondom</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "random-btn-icon" %>
+  <%= image_tag 'question.logo.jpg' , size: '185x50' ,class: "random-btn-icon" %>
 <% end %>
