--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -12,7 +12,6 @@
     <%= form_with model: @foods, local: true do |f| %>
       </div>
 
-      <%# 商品画像 %>
     <div class="img-upload">
       <div class="weight-bold-text">
         料理画像
@@ -26,9 +25,7 @@
         <div id="image-list"></div>
       </div>
     </div>
-    <%# /商品画像 %>
 
-    <%# 商品名と商品説明 %>
     <div class="new-items">
       <div class="weight-bold-text">
         料理名
@@ -42,12 +39,17 @@
         </div>
         <%= f.text_area :ways, class:"items-text", id:"item-info", placeholder:"料理の手順や説明" %>
       </div>
+      <div class="items-explain">
+        <div class="weight-bold-text">
+          料理の材料
+          <span class="indispensable">必須</span>
+        </div>
+        <%= f.text_area :ingredients, class:"items-text",id: "ingredients-info",  placeholder:"食材" %>
     </div>
-    <%# /商品名と商品説明 %>
 
-    <%# 商品の詳細 %>
+
     <div class="items-detail">
-      <div class="weight-bold-text">商品の詳細</div>
+      <div class="weight-bold-text">料理の種類</div>
       <div class="form">
         <div class="weight-bold-text">
           カテゴリー
@@ -56,15 +58,13 @@
         <%= f.collection_select(:type_of_food_id, TypeOfFood.all, :id , :name, {}, {class:"select-box", id:"item-category"}) %>
       </div>
     </div>
-    <%# /商品の詳細 %>
 
-    <%# 下部ボタン %>
+
     <div class="sell-btn-contents">
-      <%= f.submit "出品する" ,class:"sell-btn", id: "sell-btn" %>
+      <%= f.submit "投稿する" ,class:"sell-btn", id: "sell-btn" %>
       <%=link_to 'もどる', root_path, class:"back-btn" %>
     </div>
     <% end %>
-    <%# /下部ボタン %>
     </div>
 
 </div>
