--- a/app/views/randoms/index.html.erb
+++ b/app/views/randoms/index.html.erb
@@ -1,12 +1,16 @@
     <div class="header">
-    <%= render "/shared/header"%>
+    <%= render "/shared/header" , user: @random.user%>
     </div>
 
-    <div>ランダムボタンの実装</div>
+    <div id="main-random">
 
-    <%= form_with model: @random, url: randoms_search_path, method: :GET, local: true do |f| %>
+    <div id="random-title">今日の献立</div>
+
+    <%= form_with model: @random, url: randoms_search_path, method: :GET, id: "form", local: true do |f| %>
 
     <%= f.collection_select :type_of_food_id, TypeOfFood.all, :id, :name,{} %>
 
-      <%= f.submit "送信" %>
+      <%= f.submit "ランダム", id: "submit-btn"%>
     <%end %>
+
+    </div>
