--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,14 @@
 <div id="header-main">
 
 <div class="header-title">
-<%= link_to "Hello", root_path %>
+<%= link_to "Cooking Com", root_path %>
 </div>
 
 <div class="header-btns">
   <ul id="log-list">
       <%if user_signed_in?%>
       <div id="sign-up">
-      <li class="log-btn">hello</li>
+      <li id="current-user-name" class="log-btn"><%=current_user.nickname %></li>
       <li class="log-btn"><%=link_to "ログアウト", destroy_user_session_path, method: :delete%></li>
       </div>
       <% else %>
