--- a/app/views/randoms/search.html.erb
+++ b/app/views/randoms/search.html.erb
@@ -14,6 +14,6 @@
     </div>
     <% else %>
     <div id="alart-non">誠に申し訳ありませんが<br>まだ献立が存在しません</div>
-    <div id="image-space"><%= image_tag "apology.png" %></div>
+    <div id="image-space"><%= image_tag "2576.png", size: "400x400" %></div>
 </div>
 <% end %>
