--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -13,7 +13,7 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  background-image: image-url("menu-1");
+  background-image: url("menu-1");
   background-repeat: no-repeat;
   background-size: cover;
 }
