--- a/app/assets/stylesheets/random_index.css
+++ b/app/assets/stylesheets/random_index.css
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   background-color: cornsilk;
-  background-image: image-url("vegetables-2977888_1920.jpg");
+  background-image: url("vegetables-2977888_1920.jpg");
   background-repeat: no-repeat;
 }
 
