--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   overflow: scroll;
   background-color: darkgreen;
-  background-image: image-url("ingredients.jpg");
+  background-image: url("ingredients.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
